samples/_failures_safe/1761215186_d0b3cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99e4a7bd.c: In function ‘main’:
./samples/SAFE/__tmp_99e4a7bd.c:155:17: error: expected expression at end of input
  155 |                 if (
      |                 ^~
./samples/SAFE/__tmp_99e4a7bd.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99e4a7bd.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99e4a7bd.c:155:17: error: expected declaration or statement at end of input
